fixing mobile spacing on hero section v0.0.1

--- a/scss/layouts/_navigation.scss
+++ b/scss/layouts/_navigation.scss
@@ -1,9 +1,9 @@
 @use '../abstracts' as *;
 
 #navigation {
-    @media #{$break1} {
-        margin-block-end: 2.5rem; 
-    }
+    // @media #{$break1} {
+    //     margin-block-end: 23.5rem; 
+    // }
     @media #{$break2open} { 
         margin-block-end: 3.5rem; 
     }
